fix: corrijo mayusculas de tab de ingresos

--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -144,10 +144,10 @@
 <div class="form-section">
     <ul class="nav nav-tabs" id="ingresosTabs" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="ingresos-fijos-tab" data-bs-toggle="tab" data-bs-target="#ingresos-fijos" type="button" role="tab" aria-controls="ingresos-fijos" aria-selected="true">ingresos Fijos</button>
+            <button class="nav-link active" id="ingresos-fijos-tab" data-bs-toggle="tab" data-bs-target="#ingresos-fijos" type="button" role="tab" aria-controls="ingresos-fijos" aria-selected="true">Ingresos Fijos</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="ingresos-variables-tab" data-bs-toggle="tab" data-bs-target="#ingresos-variables" type="button" role="tab" aria-controls="ingresos-variables" aria-selected="false">ingresos Variables</button>
+            <button class="nav-link" id="ingresos-variables-tab" data-bs-toggle="tab" data-bs-target="#ingresos-variables" type="button" role="tab" aria-controls="ingresos-variables" aria-selected="false">Ingresos Variables</button>
         </li>
     </ul>
     <div class="tab-content" id="ingresosTabsContent">
