Se agregaron modificaciones de nombres

--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -171,7 +171,7 @@
                                 {% for ingreso in ingresos_fijos %}
                                 <tr>
                                     <td>{{ ingreso.categoria.nombre }}</td>
-                                    <td>{{ ingreso.observaciones }}</td>
+                                    <td>{{ ingreso.descripcion }}</td>
                                     <td>${{ ingreso.monto }}</td>
                                     <td>
                                         <!--Boton Ver-->
