--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -91,7 +91,7 @@
         <div class="col-md-3 text-center">
             <div class="card p-3 bg-info text-white">
                 <h5>Flujo de Saldos</h5>
-                <h3 id="flujo-saldos">$0.00</h3>
+                <h3 id="ingresos-fijos">$0.00</h3>
             </div>
         </div>
     </div>
